<resources>
    <string name="app_name">Budget Builder</string>
    <string name="customize">Customize Your Room</string>
    <string name="furniture">Furniture</string>
    <string name="furniture_chair">Desk Chair</string>
    <string name="furniture_bed">Bed</string>
    <string name="furniture_endtable">End Table</string>
    <string name="furniture_couch">Couch</string>
    <string name="furniture_coffeetable">Coffee Table</string>
    <string name="furniture_desk">Desk</string>
    <string name="furniture_shelf">Shelf and Cabinet</string>
    <string name="furniture_floor">Floor</string>
    <string name="Desk">Desk</string>
    <string name="gallery">Gallery</string>
    <string name="prev_rooms">Previous Rooms</string>
    <string name="add_expense">Add expense</string>
    <string name="edit_expense">Edit expense</string>
    <string name="delete_expense">Delete expense</string>
    <string name="delete_warning">Are you sure you want to delete this expense?</string>
    <string name="reset_warning">Are you sure you want to reset budget builder? Doing so will erase all your current budget, expenses, rooms and coins.</string>
    <string name="reset_lbl">Reset Budget Builder</string>
    <string name="lbl_recentTnx">Recent Expenses</string>
    <string name="btn_see_all">See All</string>
    <string name="lbl_summary">Summary</string>
    <string name="rb_line">Line</string>
    <string name="rb_pie">Pie</string>
    <string name="purchase">Purchase</string>
    <string name="cancel">Cancel</string>
    <string name="expense_total">-%c %f</string>
    <string name="btn_back">Back</string>
    <string name="settings_budget">Set Daily Budget</string>
    <string name="settings_currency">Currency</string>
    <string name="settings_reset">Reset Budget Builder</string>
    <string name="settings_desc_budget">Automatically set budget the entered amount for each day. Leave blank to manually set each day.</string>
    <string name="settings_desc_currency">The currency to be used.</string>
    <string name="settings_desc_resest">Erases all your data (i.e. budget, expenses, rooms and coins).</string>
    <string name="settings_btn">Settings</string>
    <string name="congratulations">Congratulations!</string>
    <string name="earned">You have earned some coins!</string>
    <string name="okay">Okay</string>
    <string name="select">Select</string>
    <string name="select_date">Select Date</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="no_data">No Data to Show</string>
    <string name="new_month">Another month has passed! Your room will be reset but don\'t worry! Your room will be saved inside the gallery!</string>
    <string name="enter_name_of_room"> Please enter the name of your room:</string>
    <string name="curr_date">%1s %2d, %3d</string>
    <string name="budget">%1s%2.02f</string>
    <string name="month_year">%1s %2d</string>
    <string name="name_of_room">Name of Room</string>
    <string name="no_rooms">No rooms available!</string>
    <string name="warning">Warning: Once you exit this page, you will no longer be able to edit the room or edit the room</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>