<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    android:backgroundTint="@color/beige"
    tools:context=".SaveRoomFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.04" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_save_room_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_rectangle"
            android:clipChildren="true"
            android:clipToPadding="false"
            android:elevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Space
                android:id="@+id/space_save_room_header"
                android:layout_width="0dp"
                android:layout_height="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_header_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.96" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_header_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.04" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fcv_save_room"
                android:name="com.mobdeve.s13.group1.budgetbuilder.RoomFragment"
                android:layout_width="380dp"
                android:layout_height="350dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/gl_header_right"
                app:layout_constraintStart_toStartOf="@id/gl_header_left"
                app:layout_constraintTop_toBottomOf="@id/tv_customize" />

            <ImageButton
                android:id="@+id/btn_save_back"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/rounded_inner"
                android:contentDescription="@string/btn_back"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintBottom_toBottomOf="@+id/tv_customize"
                app:layout_constraintStart_toStartOf="@+id/gl_header_left"
                app:layout_constraintTop_toBottomOf="@+id/space_save_room_header"
                app:tint="@color/dark_brown" />

            <TextView
                android:id="@+id/tv_customize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_extrabold"
                android:text="@string/customize"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/space_save_room_header" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/et_save_room_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:fontFamily="@font/inter"
            android:inputType="textPersonName"
            android:text="Name"
            app:layout_constraintEnd_toStartOf="@+id/gl_right"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_extrabold"
            android:text="@string/furniture"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/et_save_room_name" />

        <TextView
            android:id="@+id/tv_save_chair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/inter"
            android:text="@string/furniture_chair"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_save_chairs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toStartOf="@+id/gl_right"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/tv_save_chair" />

        <TextView
            android:id="@+id/tv_save_desk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/inter"
            android:text="@string/furniture_desk"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/rv_save_chairs" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_save_desk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toStartOf="@+id/gl_right"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/tv_save_desk" />

        <TextView
            android:id="@+id/tv_save_bed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/inter"
            android:text="@string/furniture_bed"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/rv_save_desk" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_save_beds"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toStartOf="@+id/gl_right"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/tv_save_bed" />

        <TextView
            android:id="@+id/tv_save_endtable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/inter"
            android:text="@string/furniture_endtable"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/rv_save_beds" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_save_endtable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toStartOf="@+id/gl_right"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/tv_save_endtable" />

        <TextView
            android:id="@+id/tv_save_couch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/inter"
            android:text="@string/furniture_couch"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/rv_save_endtable" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_save_couch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toStartOf="@+id/gl_right"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/tv_save_couch" />

        <TextView
            android:id="@+id/tv_save_coffeetable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/inter"
            android:text="@string/furniture_coffeetable"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/rv_save_couch" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_save_coffeetable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toStartOf="@+id/gl_right"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/tv_save_coffeetable" />

        <TextView
            android:id="@+id/tv_save_shelf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/inter"
            android:text="@string/furniture_shelf"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/rv_save_coffeetable" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_save_shelf"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toStartOf="@+id/gl_right"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/tv_save_shelf" />

        <TextView
            android:id="@+id/tv_save_floor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/inter"
            android:text="@string/furniture_floor"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/rv_save_shelf" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_save_floor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toStartOf="@+id/gl_right"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/tv_save_floor" />

        <Space
            android:id="@+id/space_bottom_border"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toStartOf="@+id/gl_right"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/btn_save_room" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_extrabold"
            android:text="@string/name_of_room"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/et_save_room_name"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toTopOf="@+id/et_save_room_name" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inter_extrabold"
            android:gravity="center"
            android:text="@string/warning"
            app:layout_constraintEnd_toStartOf="@+id/gl_right"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/cl_save_room_header" />

        <Button
            android:id="@+id/btn_save_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Save"
            android:fontFamily="@font/inter"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:backgroundTint="@color/dark_green"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toStartOf="@+id/gl_right"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/rv_save_floor" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
