<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corner"
    android:backgroundTint="@color/beige"
    android:elevation="10dp"
    android:paddingStart="20dp"
    android:paddingTop="10dp"
    android:paddingEnd="20dp"
    android:paddingBottom="10dp"
    tools:context=".DatePickerDialogFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tv_select_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/inter_extrabold"
        android:text="@string/select_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <NumberPicker
        android:id="@+id/np_date_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/np_date_month"
        app:layout_constraintTop_toBottomOf="@+id/tv_select_date" />

    <NumberPicker
        android:id="@+id/np_date_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toStartOf="@+id/np_date_year"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_select_date" />

    <Button
        android:id="@+id/btn_date_select"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/select"
        android:textColor="@color/white"
        app:backgroundTint="@color/dark_green"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/np_date_year"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/np_date_month"
        app:layout_constraintTop_toBottomOf="@+id/np_date_month" />

    <Button
        android:id="@+id/btn_date_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/cancel"
        android:textColor="@color/white"
        app:backgroundTint="@color/maroon"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/btn_date_select"
        app:layout_constraintStart_toStartOf="@id/btn_date_select"
        app:layout_constraintTop_toBottomOf="@id/btn_date_select" />


</androidx.constraintlayout.widget.ConstraintLayout>